--- a/matematyka/lekcji/Odczytywanie danych/indexOdczytywanie.html
+++ b/matematyka/lekcji/Odczytywanie danych/indexOdczytywanie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odczytywanie danych</title>
+    <title> Odczytywanie danych</title>
     <link rel="stylesheet" href="../../../style.css">
     <link rel="stylesheet" href="../../../styleText.css">
 </head>
@@ -21,16 +21,24 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexMatematyka.html">Matematyka > </a> <a href="#">Odczytywanie danych</a>
+               <a href="../../indexMatematyka.html">Matematyka > </a> <a href="#"> Odczytywanie danych</a>
         </h6>
-        <h2>Odczytywanie danych</h2>
+        <h2> Odczytywanie danych</h2>
         <div>
-            <ul >
-               <Li><a href="">- Temperatura</a></Li>
-               <Li><a href="">- Tabele</a></Li>
-               <Li><a href="">- Dsagramy i wykresy</a></Li>
-            </ul>
-            
+            <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+            </ul> 
         </div>
     </main>
 </body>
