--- a/matematyka/lekcji/Zadania tekstowe/indexZadanieTekstowe.html
+++ b/matematyka/lekcji/Zadania tekstowe/indexZadanieTekstowe.html
@@ -25,15 +25,32 @@
         </h6>
         <h2>Zadania tekstowe</h2>
         <div>
-            <ul >
-               <Li><a href="">- Rozwiązywanie zadań - kolejność działań</a></Li>
-               <Li><a href="">- Rozwiązywanie zadań - Ilość, cena, wartość</a></Li>
-               <Li><a href="">- Rozwiązywanie zadań - Zegar i kalendarz</a></Li>
-               <Li><a href="">- Rozwiązywanie zadań - Dzielenie i mnożenie</a></Li>
-               <Li><a href="">- Rozwiązywanie zadań - Dodawanie i odejmowanie</a></Li>
-               <Li><a href="">- Rozwiązywanie zadań - Porównywanie różnicowe i ilorazowe</a></Li>
-            </ul>
-            
+            <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img
+                            src="./image/img5.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img
+                            src="./image/img6.png" alt=""></a>
+                </div>
+            </ul> 
         </div>
     </main>
 </body>
