--- a/angielska/lekcji/Gramatyka/indexGramatyka.html
+++ b/angielska/lekcji/Gramatyka/indexGramatyka.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ekologia</title>
+    <title>Gramatyka</title>
     <link rel="stylesheet" href="../../../style.css">
     <link rel="stylesheet" href="../../../styleText.css">
 </head>
@@ -21,9 +21,75 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#"> Ekologia</a>
+               <a href="../../indexAngl.html">Język angielski > </a> <a href="#">Gramatyka</a>
         </h6>
-        <h2> Ekologia</h2>
+        <h2>Gramatyka</h2>
+        <h3>план уроков на год — строгий порядок и разбивка по темам:</h3>
+        <div>
+            <h5>Блок 1. Основы грамматики: существование и владение</h5>
+            <ul>
+                <li><a href="./lekcjiGram/lekcja01.html"><b>1. There is / There are</b> — утвердительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja02.html"><b>2. There is / There are</b> — отрицательные предложения </a></li>
+                <li><a href="./lekcjiGram/lekcja03.html"><b>3. There is / There are</b> — вопросительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja04.html"><b>4. Have got</b> — утвердительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja05.html"><b>5. Have got</b> — вопросительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja06.html"><b>6. Have got</b> — отрицательные предложения</a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 2. Present Simple: утверждения, вопросы, отрицания</h5>
+            <ul>
+                <li><a href="./lekcjiGram/lekcja07.html"><b>7. Present Simple</b> — утвердительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja08.html"><b>8. Present Simple</b> — вопросительные предложения</a></li>
+                <li><a href="./lekcjiGram/lekcja09.html"><b>9. Present Simpl</b>e — отрицательные предложения</a></li>
+            </ul>
+        </div>
+         <div>
+            <h5>Блок 3. Модальный глагол can — умения и разрешения</h5>
+            <ul>
+                <li><a href="">Can — утвердительные предложения, умения</a></li>
+                <li><a href="">Can — отрицательные предложения, умения</a></li>
+                <li><a href="">Can — вопросительные предложения, умения</a></li><li><a href="">Can / Can’t — выражение разрешения и запрета </a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 4. Present Continuous — действия сейчас</h5>
+            <ul>
+                <li><a href="">Present Continuous — утвердительные предложения</a></li>
+                <li><a href="">Present Continuous — отрицательные предложения (1 урок)</a></li>
+                <li><a href="">Present Continuous — вопросительные предложения  </a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 5. Глагол to be</h5>
+            <ul>
+                <li><a href="">To be — утвердительные предложения</a></li>
+                <li><a href="">To be — отрицательные предложения</a></li>
+                <li><a href="">To be — вопросительные предложения  </a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 6. Приимки места и времени</h5>
+            <ul>
+                <li><a href="">Приимки места: in, on, under, next to, behind, between </a></li>
+                <li><a href="">Приимки времени: at, on, in</a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 7. Артикли и местоимения</h5>
+            <ul>
+                <li><a href=""><b>Артикли a / an</b></a></li>
+                <li><a href=""><b>Притяжательные местоимения</b></a></li>
+                <li><a href=""><b>Притяжательный падеж (‘s) </b></a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Блок 8. Повелительное наклонение</h5>
+            <ul>
+                <li><a href=""><b>Повелительное наклонение (Imperative)</b> </a></li>
+            </ul>
+        </div>
+        <!--  -->
         <div>
             <ul class="ulHome">
                 <div>
@@ -37,6 +103,125 @@
                 <div>
                     <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
                             src="./image/img3.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img5.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img6.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img7.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img8.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img9.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img10.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img11.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img12.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img13.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img14.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img15.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img16.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img7.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img18.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img19.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img20.png" alt=""></a>
+                </div> <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img21.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img22.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img23.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img24.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img25.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img26.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img27.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img28.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img29.png" alt=""></a>
+                </div>
+                 <div>
+                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img30.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                            src="./image/img31.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img32.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                            src="./image/img33.png" alt=""></a>
                 </div>
             </ul>
             
