--- a/angielska/indexAngl.html
+++ b/angielska/indexAngl.html
@@ -30,7 +30,7 @@
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/Gramatyka/indexGramatyka.html" class="zagolowok"><img
                             src="./image/img2.png" alt=""></a>
                 </div>
                 <div>
