--- a/angielska/lekcji/Gramatyka/indexGramatyka.html
+++ b/angielska/lekcji/Gramatyka/indexGramatyka.html
@@ -47,9 +47,10 @@
          <div>
             <h5>Блок 3. Модальный глагол can — умения и разрешения</h5>
             <ul>
-                <li><a href="">Can — утвердительные предложения, умения</a></li>
-                <li><a href="">Can — отрицательные предложения, умения</a></li>
-                <li><a href="">Can — вопросительные предложения, умения</a></li><li><a href="">Can / Can’t — выражение разрешения и запрета </a></li>
+                <li><a href="./lekcjiGram/lekcja10.html">10. Can — утвердительные предложения, умения</a></li>
+                <li><a href="./lekcjiGram/lekcja11.html">11. Can — отрицательные предложения, умения</a></li>
+                <li><a href="./lekcjiGram/lekcja12.html">12. Can — вопросительные предложения, умения</a></li>
+                <li><a href="./lekcjiGram/lekcja13.html">13. Can / Can’t — выражение разрешения и запрета </a></li>
             </ul>
         </div>
         <div>
