--- a/polska/indexPolska.html
+++ b/polska/indexPolska.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,42 +8,59 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styleText.css">
 </head>
+
 <body>
     <header>
-        
-         <ul class="header">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Język polski</a></li>
-                <li><a href="../matematyka/indexMatematyka.html">Matematyka</a></li>
-                <li><a href="../przyroda/indexPrzyroda.html">Przyroda</a></li>
-                <li><a href="../angielska/indexAngl.html">Język angielski</a></li>
-                <li><a href="../lektura/indexLektura.html">Lektura</a></li>
-            </ul>
+
+        <ul class="header">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../polska/indexPolska.html">Język polski</a></li>
+            <li><a href="../matematyka/indexMatematyka.html">Matematyka</a></li>
+            <li><a href="../przyroda/indexPrzyroda.html">Przyroda</a></li>
+            <li><a href="../angielska/indexAngl.html">Język angielski</a></li>
+            <li><a href="../lektura/indexLektura.html">Lektura</a></li>
+        </ul>
     </header>
     <main class="wrapper">
         <h1>Język polski</h1>
         <div>
             <ul class="ulHome">
-               <div>
-                    <a href="./lekcji/ortografia/indexOrtografia.html" class="zagolowok"><img src="./image/ortografia.png" alt=""></a>
-               </div>
-               <div>
-                    <a href="./lekcji/gramatyka/indexGramatyka.html"  class="zagolowok"><img src="./image/gramatyka.png" alt=""></a>
-               </div>
-               <div>
-                    <a href="./lekcji/Sztuka wypowiedzi/indexSztukaWydpow.html" class="zagolowok"><img src="./image/sztukaWypow.png" alt=""></a>
-               </div>
-               <div>
-                    <a href="./lekcji/Sztuka pisania/indexSztukaPisanie.html" class="zagolowok"><img src="./image/sztukaPisania.png" alt=""></a>
-               </div>
-               <div>
-                    <a href="./lekcji/ Interpunkcja/indexInterpunkcja.html" class="zagolowok"><img src="./image/interpunkcja.png" alt=""></a>
-               </div>
-               <div>
-                    <a href="./lekcji/Fonetyka/indexFonetyka.html" class="zagolowok"><img src="./image/fonetyka.png" alt=""></a>
-               </div>
+                <div>
+                    <a href="./lekcji/ortografia/indexOrtografia.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Gramatyka/indexGramatyka.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Sztuka wypowiedzi/indexSztukaWydpow.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Sztuka pisania/indexSztukaPisanie.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/" class="zagolowok"><img src="./image/img5.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/ Interpunkcja/indexInterpunkcja.html" class="zagolowok"><img
+                            src="./image/img6.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji/Fonetyka/indexFonetyka.html" class="zagolowok"><img
+                            src="./image/img7.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcji" class="zagolowok"><img src="./image/img8.png"
+                            alt=""></a>
+                </div>
             </ul>
+            
         </div>
     </main>
 </body>
+
 </html>
