--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -49,19 +49,19 @@
                             src="./image/img5.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc06.html" class="zagolowok"><img
                             src="./image/img6.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img7.png"
+                    <a href="./lekcji/lekc07.html" class="zagolowok"><img src="./image/img7.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc08.html" class="zagolowok"><img
                             src="./image/img8.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc09.html" class="zagolowok"><img
                             src="./image/img9.png" alt=""></a>
                 </div>
                  <div>
@@ -94,7 +94,7 @@
                 </div>
                  <div>
                     <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
-                            src="./image/img7.png" alt=""></a>
+                            src="./image/img17.png" alt=""></a>
                 </div>
                  <div>
                     <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img18.png"
