--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -65,23 +65,23 @@
                             src="./image/img9.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img10.png"
+                    <a href="./lekcji/lekc10.html" class="zagolowok"><img src="./image/img10.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc11.html" class="zagolowok"><img
                             src="./image/img11.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc12.html" class="zagolowok"><img
                             src="./image/img12.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc13.html" class="zagolowok"><img
                             src="./image/img13.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img14.png"
+                    <a href="./lekcji/lekc14.html" class="zagolowok"><img src="./image/img14.png"
                             alt=""></a>
                 </div>
                 <div>
