--- a/polska/lekcji/ortografia/lekcji/lekc09.html
+++ b/polska/lekcji/ortografia/lekcji/lekc09.html
@@ -30,15 +30,15 @@
           <h1>Język polski</h1>
           <h2>Ortografia</h2>
           <h3>📘 "rz" - niewymienne</h3>
-          <h4>🇵🇱 "RZ" — может меняться на "R"</h4>
+          <h4>🇵🇱 "RZ" — не меняется (niewymienne)</h4>
           <div>
                <h6>🔤 Что это значит?</h6>
-               <p>В польском языке "rz" иногда меняется на "r" в других формах или родственных словах.</p>
+               <p>Иногда <b>"rz"</b> — это <b>часть слова, которая ни на что не меняется</b>. В других формах этого слова оно остаётся таким же — <b>"rz" не превращается в "r"</b>.</p>
                
                <h6>✅ Простое правило:</h6>
-               <p>Если в одном слове есть <b>"rz"</b>, то в других его формах или в родственных словах часто появляется просто <b>"r"</b>.</p>
+               <p>Если в других формах слова <b>"rz" не меняется</b>, значит, оно <b>niewymienne — нечередующееся</b>.</p>
                <div>
-                    <h6>🧒🏻 Пример для ребёнка:</h6>
+                    <h6>🧒🏻 Пример:</h6>
                     <table style="width: 60%;">
                          <tr>
                               <th>Слово</th>
@@ -46,49 +46,37 @@
                               <th>Что меняется?</th>
                          </tr>
                          <tr>
-                              <td>morze (море)</td>
-                              <td>morski (морской)</td>
-                              <td>rz → r</td>
+                              <td>rzeka (река)</td>
+                              <td>rzeki (реки)</td>
+                              <td>❌ не меняется</td>
                          </tr>
                          <tr>
-                              <td>bierze (он берёт)</td>
-                              <td>brać (брать)</td>
-                              <td>rz → r</td>
-                         </tr>
-                         <tr>
-                              <td>zamrożony (замороженный)</td>
-                              <td>mróz (мороз)</td>
-                              <td>rz → r</td>
-                         </tr>
-                         <tr>
-                              <td>rzeźba (скульптура)</td>
-                              <td>rzeźbiarz (скульптор) <br> rzeźbić (лепить)</td>
-                              <td>rz остаётся</td>
+                              <td>krzesło (стул)</td>
+                              <td>rzeczny (речной)</td>
+                              <td>❌ не меняется</td>
                          </tr>
                          <tr>
                               <td>marzyć (мечтать)</td>
                               <td>marzenie (мечта)</td>
-                              <td>rz остаётся</td>
+                              <td>❌ не меняется</td>
                          </tr>
                          <tr>
-                              <td>wieża</td>
-                              <td>wierzchołek</td>
-                              <td>rz → r</td>
-                         </tr>
-                         <tr>
-                              <td>orzeł</td>
-                              <td>orli</td>
-                              <td>rz → r</td>
+                              <td>wrzos (вереск)</td>
+                              <td>wrzosowy (вересковый)</td>
+                              <td>❌ не меняется</td>
                          </tr>
                     </table>
                </div>
                <div>
-                    <h5>⚠️ Важно:</h5>
+                    <h5>📌 Как понять, что "rz" нечередуется?</h5>
                     <ul>
-                         Не всегда "rz" меняется — только в некоторых словах! Поэтому:
-                         <li>Слушай внимательно, как звучит корень.</li>
-                         <li>Пробуй найти родственное слово — если слышишь "r", значит, в другом слове может быть "rz".</li>
+                         <li>Попробуй изменить слово или найти родственное.</li>
+                         <li>Если "rz" остаётся, значит — niewymienne.</li>
+                         <li>В таких словах "rz" нужно просто запомнить.</li>
                     </ul>
+               </div>
+               <div>
+                    <p>если при переводе на украинский буква <b>Р</b> то в польской <b>rz</b></p>
                </div>
                
           </div>
@@ -96,8 +84,8 @@
 
           <!--  -->
           <div>
-               <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/rz-wymienne/"
-                         target="_blank">"rz" - wymienne >></a></h4>
+               <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/rz-niewymienne/"
+                         target="_blank">"rz" - niewymienne >></a></h4>
           </div>
      </main>
 </body>
