--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -85,11 +85,11 @@
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc15.html" class="zagolowok"><img
                             src="./image/img15.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc16.html" class="zagolowok"><img
                             src="./image/img16.png" alt=""></a>
                 </div>
                  <div>
