--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -93,11 +93,11 @@
                             src="./image/img16.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/z-wymienne-na-g/" class="zagolowok" target="_blank"><img
                             src="./image/img17.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img18.png"
+                    <a href="./lekcji/lekc18.html" class="zagolowok"><img src="./image/img18.png"
                             alt=""></a>
                 </div>
                 <div>
