--- a/polska/lekcji/ortografia/lekcji/lekc16.html
+++ b/polska/lekcji/ortografia/lekcji/lekc16.html
@@ -63,6 +63,8 @@
           <div>
                <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/z-wymienne-na-g-i-s/"
                          target="_blank">"ż" wymienne na g i s >></a></h4>
+               <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/z-wymienne-na-g/"
+                         target="_blank">"ż" wymienne na g >></a></h4>
           </div>
      </main>
 </body>
