--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -101,11 +101,11 @@
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc19.html" class="zagolowok"><img
                             src="./image/img19.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc20.html" class="zagolowok"><img
                             src="./image/img20.png" alt=""></a>
                 </div> <div>
                     <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
