--- a/polska/lekcji/ortografia/lekcji/lekc21.html
+++ b/polska/lekcji/ortografia/lekcji/lekc21.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Czasowniki z końcówką "-uje", "-ują"</title>
+     <title>Czasowniki z końcówką "-uję" i "-uje"</title>
      <link rel="stylesheet" href="../../../../style.css">
      <link rel="stylesheet" href="../../../../styleText.css">
      <link rel="stylesheet" href="../../../../styleTable.css">
@@ -25,25 +25,42 @@
      <main class="wrapper">
           <h6>
                <a href="../../../indexPolska.html">Język polski > </a> <a href="../indexOrtografia.html">Ortografia >
-               </a> Czasowniki z końcówką "-uje", "-ują"
+               </a> Czasowniki z końcówką "-uję" i "-uje"
           </h6>
           <h1>Język polski</h1>
           <h2>Ortografia</h2>
-          <h3>🇵🇱 Czasowniki z końcówką "-uje" i "-ują"</h3>
+          <h3>🇵🇱 Czasowniki z końcówką "-uję" i "-uje"</h3>
           <h4>✅ 📘 Co to są za końcówki?</h4>
-          <p class="p26 centr">To są <b>końcówki czasowników</b> w czasie teraźniejszym (сейчас, настоящее время), które pokazują:</p>
-          <ul>
-               <li><b>kto</b> coś robi (3. osoba)</li>
-               <li>że to robi <b>on / ona / ono</b> → końcówka <b>-uje</b></li>
-               <li>że to robią <b>oni / one</b> → końcówka <b>-ują</b></li>
-          </ul>
+          <p class="p26 centr">To są <b>końcówki czasowników w czasie teraźniejszym </b>(настоящее время), które mówią:</p>
+          <table style="width: 60%;">
+               <tr>
+                    <th>Końcówka</th>
+                    <th>Kto robi?</th>
+                    <th>Po rosyjsku</th>
+               </tr>
+               <tr>
+                    <td><b>-uję</b></td>
+                    <td>ja (я)</td>
+                    <td>я что-то делаю</td>
+               </tr>
+               <tr>
+                    <td><b>-uje</b></td>
+                    <td>on / ona (он / она)</td>
+                    <td>он / она делает</td>
+               </tr>
+          </table>
           <div>
                <h5>🧒🏻 Примеры:</h5>
                <table style="width: 60%;">
                     <tr>
-                         <th>Kto?</th>
+                         <th>Osoba</th>
                          <th>Czasownik (глагол)</th>
                          <th>Po rosyjsku</th>
+                    </tr>
+                    <tr>
+                         <td>ja</td>
+                         <td>prac<b>uję</b></td>
+                         <td>я работаю</td>
                     </tr>
                     <tr>
                          <td>on / ona</td>
@@ -51,9 +68,9 @@
                          <td>он/она работает</td>
                     </tr>
                     <tr>
-                         <td>oni / one</td>
-                         <td>prac<b>ują</b></td>
-                         <td>они работают</td>
+                         <td>ja</td>
+                         <td>mal<b>uję</b></td>
+                         <td>я рисую</td>
                     </tr>
                     <tr>
                          <td>on / ona</td>
@@ -61,44 +78,38 @@
                          <td>он/она рисует</td>
                     </tr>
                     <tr>
-                         <td>oni / one</td>
-                         <td>mal<b>ują</b></td>
-                         <td>они рисуют</td>
+                         <td>ja</td>
+                         <td>dzięk<b>uję</b></td>
+                         <td>я благодарю</td>
                     </tr>
                     <tr>
                          <td>on / ona</td>
                          <td>dzięk<b>uje</b></td>
                          <td>он/она благодарит</td>
                     </tr>
-                    <tr>
-                         <td>oni / one</td>
-                         <td>dzięk<b>ują</b></td>
-                         <td>они благодарят</td>
-                    </tr>
                </table>
           </div>
           <div>
                <h5>🧠 Łatwe do zapamiętania:</h5>
-               <p>Если глагол заканчивается на <b>-uje / -ują</b>, это значит:</p>
-               <p><b>кто-то сейчас делает</b> (рисует, работает, благодарит).</p>
-          </div>
-          <div>
-               <h5>✨ Jak zapamiętać?</h5>
                <ul>
-                    <li>🔹 <b>-uje</b> → он / она что-то делает</li>
-                    <li>🔹 <b>-ują</b> → они что-то делают</li>
+                    <li><b>🔹 -uję</b> = Я</li>
+                    <li><b>🔸 -uje</b> = Он / она</li>
                </ul>
           </div>
           <div>
-               <h5>🛑 Uwaga: nie wszystkie czasowniki mają tę końcówkę!</h5>
+               <h5>🧠 Trik do zapamiętania:</h5>
+               <ul>
+                    <li>➡️ Jeśli mówisz o <b>sobie</b> („ja”) – używaj końcówki <b>-uję</b></li>
+                    <li>➡️ Jeśli mówisz o <b>kimś innym</b> – używaj końcówki <b>-uje</b></li>
+               </ul>
           </div>
 
 
 
           <!--  -->
           <div>
-               <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/czasowniki-z-koncowka-uje-uja/"
-                         target="_blank">Czasowniki z końcówką "-uje", "-ują" >></a></h4>
+               <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/jezyk-polski/ortografia/czasowniki-z-koncowka-uje-uje/"
+                         target="_blank">Czasowniki z końcówką "-uje", "-uję" >></a></h4>
           </div>
      </main>
 </body>
