--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -108,27 +108,27 @@
                     <a href="./lekcji/lekc20.html" class="zagolowok"><img
                             src="./image/img20.png" alt=""></a>
                 </div> <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc21.html" class="zagolowok"><img
                             src="./image/img21.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img22.png"
+                    <a href="./lekcji/lekc22.html" class="zagolowok"><img src="./image/img22.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc23.html" class="zagolowok"><img
                             src="./image/img23.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc24.html" class="zagolowok"><img
                             src="./image/img24.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc25.html" class="zagolowok"><img
                             src="./image/img25.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img26.png"
+                    <a href="./lekcji/lekc26.html" class="zagolowok"><img src="./image/img26.png"
                             alt=""></a>
                 </div>
                 <div>
