--- a/polska/lekcji/ortografia/lekcji/lekc09.html
+++ b/polska/lekcji/ortografia/lekcji/lekc09.html
@@ -78,7 +78,20 @@
                <div>
                     <p>если при переводе на украинский буква <b>Р</b> то в польской <b>rz</b></p>
                </div>
-               
+               <div>
+                    <h5>🟡 1. RZ – Ż</h5>
+                    <h5>🇺🇦 Подсказка:</h5>
+                    <ul>
+                         <li>Если в украинском <b>„ж”</b> → <b>жорсткий, „жаба”</b> — часто это ż</li>
+                         <li>Если в украинском <b>„р”</b> → <b>„морe, морський”</b> — часто это rz</li>
+                    </ul>
+                    <ul>
+                         <li><b>morze</b> - море - <b>rz</b></li>
+                         <li><b>świeży</b> - свежий - <b>ż</b></li>
+                         <li><b>rzeka</b> - река - <b>rz</b></li>
+                         <li><b>noż</b> - нож - <b>ż</b></li>
+                    </ul>
+               </div>
           </div>
 
 
