--- a/polska/lekcji/ortografia/lekcji/lekc08.html
+++ b/polska/lekcji/ortografia/lekcji/lekc08.html
@@ -94,7 +94,20 @@
                     <h5>🔁 Повторим на простом языке:</h5>
                     <p class="centr"><b>🔤 "rz" и "r" — это друзья, которые иногда меняются местами.</b></p>
                </div>
-               
+               <div>
+                    <h5>🟡 1. RZ – Ż</h5>
+                    <h5>🇺🇦 Подсказка:</h5>
+                    <ul>
+                         <li>Если в украинском <b>„ж”</b> → <b>жорсткий, „жаба”</b> — часто это ż</li>
+                         <li>Если в украинском <b>„р”</b> → <b>„морe, морський”</b> — часто это rz</li>
+                    </ul>
+                    <ul>
+                         <li><b>morze</b> - море - <b>rz</b></li>
+                         <li><b>świeży</b> - свежий - <b>ż</b></li>
+                         <li><b>rzeka</b> - река - <b>rz</b></li>
+                         <li><b>noż</b> - нож - <b>ż</b></li>
+                    </ul>
+               </div>
           </div>
 
 
