--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -140,7 +140,7 @@
                             src="./image/img28.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc29.html" class="zagolowok"><img
                             src="./image/img29.png" alt=""></a>
                 </div>
                  <div>
