--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -144,11 +144,11 @@
                             src="./image/img29.png" alt=""></a>
                 </div>
                  <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img30.png"
+                    <a href="./lekcji/lekc30.html" class="zagolowok"><img src="./image/img30.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc31.html" class="zagolowok"><img
                             src="./image/img31.png" alt=""></a>
                 </div>
                 <div>
