--- a/polska/lekcji/ortografia/indexOrtografia.html
+++ b/polska/lekcji/ortografia/indexOrtografia.html
@@ -152,11 +152,11 @@
                             src="./image/img31.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc32.html" class="zagolowok"><img
                             src="./image/img32.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcji/lekc33.html" class="zagolowok"><img
                             src="./image/img33.png" alt=""></a>
                 </div>
                 <div>
